[workspace]
resolver = "3"
members = [ "interpret","langlib", "basicparse", "readuntil_ext", "cli", "std_builtins"]

[workspace.dependencies]
langlib.path = "./langlib"
interpret.path = "./interpret"

readuntil_ext.path = "./readuntil_ext"
basicparse.path = "./basicparse"
std_builtins.path = "./std_builtins"

iter_read_until = { git = "https://github.com/manen/puzzle", version = "0.1.0" }

thiserror = "2.0.12"
